tests/fsharp/typecheck/sigs/neg96.bsl

neg96.fs(11,9,11,21): typecheck error FS0039: The value or constructor 'StructRecord' is not defined

neg96.fs(18,10,18,11): typecheck error FS0039: The type 'X' is not defined

neg96.fs(18,10,18,11): typecheck error FS0039: The type 'X' is not defined
